--- a/pre-build/scss/scss-build/gnb.css
+++ b/pre-build/scss/scss-build/gnb.css
@@ -1,5 +1,6 @@
 /* text color */
 /* background */
+/* unit */
 .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
   max-width: 1200px;
   margin: 0 auto;
