--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -307,22 +307,18 @@ overflow-y: auto; background-color: var(--d-bg-left-menu); z-index: 1100;
   >.leftMenu{
     >li{position: relative; cursor: pointer;
       a{display: block;}
-      &.noDepth{
-        span>a:after{display: none;}
-      }
       &:first-child >a{padding: 16px 0; text-indent: 28px; 
       border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);}
-      &.active{
-        span>a{color: var(--d-c-at-left-menu-dep1);
-          &:after{transform: translateY(-50%) rotate(180deg); right: 29px; background: url("../../images/ico/ico-down-active.svg")no-repeat;}
+      >span{display: block;
+        a{display: flex; align-items: center; justify-content: space-between; position: relative; padding: 16px 0; text-indent: 28px;border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);
+          font-family: $d-fz; font-size: 1.38em; color: var(--d-c-left-menu-dep1); transition: .5s;
+            svg{width: 30px; height: 18px; margin-right: 17px; transition: .5s;}
         }
       }
-      >span{display: block;
-        a{position: relative; display: block; padding: 16px 0; text-indent: 28px;border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);
-          font-family: $d-fz; font-size: 1.38em; color: var(--d-c-left-menu-dep1); transition: .5s;
-            &:after{content: ''; width: 15px;height: 9px; position: absolute; top: 50%; right: 28px; transition: .5s;
-            transform: translateY(-50%);background: url("../../images/ico/ico-down.svg")no-repeat;}
-          }
+      &.active{
+        span>a{color: var(--d-c-at-left-menu-dep1);
+          svg{transform: rotate(180deg);}
+        }
       }
       >a{display: block;}
       >ul.leftSubMenu{display: none; padding: 16px 28px 16px 28px; box-sizing: border-box;
@@ -542,14 +538,13 @@ a{
 .button{display: flex; align-items: center; justify-content: center; height: 34px; line-height: 34px;
 padding: 0 10px; box-sizing: border-box; border-radius: 4px; font-family: $d-fz;
 font-size: 14px; color: $cfff;
+  &.btnResult{
+    span{margin-right: 7px;}
+    svg{width: 7px; height: 11px;}
+  }
   &.w75{min-width: 75px;}
   &.type01{padding: 0 10px 0 5px;}
   &.Bgblue{background-color: var(--primary);}
-}
-
-i.ico{display: inline-block; background-repeat: repeat; background-position: center;
-  &.share{width: 33px;height: 33px; background-image: url("../../images/ico/ico-share-w.svg");}
-  &.result{margin-left: 10px; width: 7px;height: 11px; background-image: url("../../images/ico/ico-result.svg");}
 }
 
 .btnArea{position: relative; display: flex;
@@ -656,9 +651,9 @@ word-break: break-all !important;}
 #frameBody{display: none; position: fixed; top: 0;width: 100%; height: 100%; background-color: $whiteBg; z-index: 10000;
   .container.hFull{height: 100%;}
   .btnArea{position: fixed; top: 0; right: 0; z-index: 9999;
-    .frameClose{width: 24px; height: 24px; padding: 18px; box-sizing: border-box;
-    border-radius: 0 0 0 5px; background-size: 24px 24px; background-image: url("../../images/ico/ico-result-close.png");
-    background-repeat: no-repeat; background-position: center center; background-color: $whiteBg;}
+    .frameClose{position: relative; width: 24px; height: 24px; padding: 18px; box-sizing: border-box;
+    color: #000; border-radius: 0 0 0 5px; background-color: $whiteBg;}
+    svg{position: absolute; top: 7px; left: 7px; width: 24px; height: 24px;}
     &.r20{right: 20px;}
   }
   .gifCont{display: none; position: fixed; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6); z-index: 9990;
@@ -674,17 +669,6 @@ word-break: break-all !important;}
 width: 290px; padding: 12px; box-sizing: border-box; border-radius: 4px; z-index: 10000;
 background-color: rgba($color: $blackBg, $alpha: 0.65);
   span{display: inline-block; text-align: center; font-size: 0.88em; color: $cfff; font-family: '맑은 고딕';}
-}
-
-/* icon */
-i.ico{display: inline-block; background-repeat: no-repeat; background-position: center;
-  /* White type */
-  &.download-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-download-w.png");}
-  &.bookMark-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-bookMark-w.png");}
-  &.github-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-github-w.png");}
-  &.wide40{background-size: 40px 40px; background-position: center 8px;}
-  &.wide32{background-size: 32px 32px; background-position: center 11px;}
-  &.center{display: block; margin: 0 auto;}
 }
 
 .resultCont{position: relative; padding: 50px; box-sizing: border-box;
@@ -725,5 +709,4 @@ i.ico{display: inline-block; background-repeat: no-repeat; background-position: 
 @import '../component/custom.scss';
 @import '../component/popup.scss';
 @import '../component/etc.scss';
-@import '../component/tooltip.scss';
 @import '../common/media.scss';
