--- a/pre-build/scss/component/custom.scss
+++ b/pre-build/scss/component/custom.scss
@@ -7,3 +7,15 @@ border-radius:4px; background:#f5f5f5;
         a{display: block;}
     }
 }
+
+.resultArea .inner .toolTipBox{position: relative; width: 150px; border: 1px solid $_222Bg; height: 150px;
+    &:hover{
+        .exTooltip{opacity: 1; visibility: visible;}
+    }
+}
+
+.exTooltip{opacity: 0; visibility: hidden; position: absolute; top: 50%; left: 180px; transform: translateY(-50%); 
+transition: .5s; z-index: 150; 
+    span{display: block; min-width: 60px; padding: 5px 0; font-family: $d-fz; font-size: 0.75em; border-radius: 3px; 
+    color: $cfff; text-align: center; background-color: $c333;}
+}
