--- a/pre-build/scss/component/layout.scss
+++ b/pre-build/scss/component/layout.scss
@@ -71,16 +71,23 @@
       &.floating{
         #floatingMenu{position: fixed; right: 40px; bottom: 20px;
           .menuArea{
-            .btnMenuList{width: 56px; height: 56px; border-radius: 50px; box-shadow: 0px 0px 8px 4px rgba($color: $blackBg, $alpha: 0.25); 
-            background: $c333 url("../../images/ico/ico-plus-w.png")no-repeat center;
+            .btnMenuList{display: flex; align-items: center; justify-content: center; width: 56px; height: 56px; border-radius: 50px; 
+            box-shadow: 0px 0px 8px 4px rgba($color: $blackBg, $alpha: 0.25); background-color: $c333;
+              >svg{width: 26px; height: 26px;}
               &:hover ul.menuList{
                 li{visibility: visible; transform: translateY(0) scale(1);}
               }
             }
             ul.menuList{position: absolute; top: -211px;
-              li{visibility: hidden; transform: translateY(0) scale(0); transition: .5s; transition-delay: 0.03s; margin: 0 auto;
+              li{visibility: hidden; transform: translateY(0) scale(0); transition: .5s; transition-delay: 0.03s;
               width: 56px; height: 56px; border-radius: 50px; box-shadow: 0px 0px 8px 4px rgba($color: $blackBg, $alpha: 0.25); background-color: $c333;
-                a{display: block; width: inherit; height: inherit;}
+                a{display: flex; align-items: center; justify-content: center; width: inherit; height: inherit;
+                  svg{
+                    &.github{width: 38px; height: 38px;}
+                    &.bookmark{width: 34px; height: 34px;}
+                    &.download{width: 32px; height: 32px;}
+                  }
+                }
                 +li{margin-top: 15px;}
               }
             }
