--- a/pre-build/scss/scss-build/input.css
+++ b/pre-build/scss/scss-build/input.css
@@ -1,5 +1,6 @@
 /* text color */
 /* background */
+/* unit */
 .customSelect {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -106,14 +107,14 @@ textarea.full {
 
 input {
   height: 30px;
-  border: 1px solid #ddd;
+  border: 1px solid var(--bdc-input);
   padding-left: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Noto Sans";
   border-radius: 4px;
-  color: #222;
-  background-color: #fff;
+  color: var(--d-c-input);
+  background-color: var(--d-bg-input);
 }
 
 input.full {
