--- a/pre-build/scss/scss-build/popup.css
+++ b/pre-build/scss/scss-build/popup.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* text color */
 /* background */
+/* unit */
 .wrap.pre.popShowHide, .wrap.pre.dragPop {
   position: relative;
 }
