--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -67,15 +67,11 @@ pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
 body{
   --d-bg-body: #fff;
   --d-bg-left-menu:#f5f5f5;
-  --d-c-title-h1: #202020;
-  --d-c-title-h2: #202020;
-  --d-c-title-h3: #202020;
+  --d-c-title: #202020;
   --d-c-main-txt: #333;
-  --d-c-left-menu-dep1: #333;
-  --d-c-left-menu-dep2: #707070;
+  --d-c-left-menu-depth: #333;
+  --d-c-at-left-menu-depth: #266bf7;
   --dis-c-left-menu-dep2: #ccc;
-  --d-c-at-left-menu-dep1:#266bf7;
-  --d-c-at-left-menu-dep2:#266bf7;
   --d-c-at-more-sub-menu: #202020;
   --d-bg-left-menu-dep1: #707070;
   --d-bg-left-menu-dep2: #eee;
@@ -84,7 +80,6 @@ body{
   --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
   --d-bg-pop: #fff;
   --d-c-pop: #222;
-  --d-bg-pop-filter: none; //backdrop-filter
   --d-bdc: #ddd;
   --d-sc-thumb: #ccc;
   --d-sc-track: #e9e9e9;
@@ -108,20 +103,17 @@ body{
   --bdc-input: #ddd;
   --primary: #266bf7;
   --d-key-focus: #000;
+  --d-fb-box: #000;
 }
 
 body[data-theme='light']{
   --d-bg-body: #fff;
   --d-bg-left-menu:#f5f5f5;
-  --d-c-title-h1: #202020;
-  --d-c-title-h2: #202020;
-  --d-c-title-h3: #202020;
+  --d-c-title: #202020;
   --d-c-main-txt: #333;
-  --d-c-left-menu-dep1: #333;
-  --d-c-left-menu-dep2: #707070;
+  --d-c-left-menu-depth: #333;
+  --d-c-at-left-menu-depth: #266bf7;
   --dis-c-left-menu-dep2: #ccc;
-  --d-c-at-left-menu-dep1:#266bf7;
-  --d-c-at-left-menu-dep2:#266bf7;
   --d-c-at-more-sub-menu: #202020;
   --d-bg-left-menu-dep1: #707070;
   --d-bg-left-menu-dep2: #eee;
@@ -130,7 +122,6 @@ body[data-theme='light']{
   --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
   --d-bg-pop: #fff;
   --d-c-pop: #222;
-  --d-bg-pop-filter: none; //backdrop-filter
   --d-bdc: #ddd;
   --d-sc-thumb: #ccc;
   --d-sc-track: #e9e9e9;
@@ -154,20 +145,17 @@ body[data-theme='light']{
   --bdc-input: #ddd;
   --primary: #266bf7;
   --d-key-focus: #000;
+  --d-fb-box: #000;
 }
 
 body[data-theme='dark']{
   --d-bg-body: #181818;
   --d-bg-left-menu:#212121;
-  --d-c-title-h1: rgba(242, 241, 241, 1);
-  --d-c-title-h2: rgba(242, 241, 241, 1);
-  --d-c-title-h3: rgba(242, 241, 241, 1);
+  --d-c-title: rgba(242, 241, 241, 1);
   --d-c-main-txt: #ececec;
-  --d-c-left-menu-dep1: rgba(242, 241, 241, 1);
-  --d-c-left-menu-dep2: #d9d9d9;
+  --d-c-left-menu-depth: rgba(242, 241, 241, 1);
+  --d-c-at-left-menu-depth: rgba(89,148,241,1);
   --dis-c-left-menu-dep2: #717171;
-  --d-c-at-left-menu-dep1:rgba(89,148,241,1);
-  --d-c-at-left-menu-dep2:rgba(89,148,241,1);
   --d-c-at-more-sub-menu: rgba(242, 241, 241, 1);
   --d-bg-left-menu-dep1: rgba(242, 241, 241, 1);
   --d-bg-left-menu-dep2: #1e1f21;
@@ -176,7 +164,6 @@ body[data-theme='dark']{
   --d-bg-hv-util-area-circle: rgba(255,255,255,0.1);
   --d-bg-pop: #313131;
   --d-c-pop: rgba(242, 241, 241, 1);
-  --d-bg-pop-filter: blur(2.5px); //backdrop-filter
   --d-bdc: #3a3b3d;
   --d-sc-thumb: #686868;
   --d-sc-track: #424242;
@@ -201,6 +188,7 @@ body[data-theme='dark']{
   --bdc-input: #a0a0a0;
   --primary: #2196F3;
   --d-key-focus: #fff;
+  --d-fb-box: #555;
 }
 
 body{
@@ -227,6 +215,7 @@ svg{fill: currentColor;
 
 .wrap.pre.h2000{height: 2000px;}
 #wrap{width: 100%; height: 100%;
+  .mainTxt{color: var(--d-c-main-txt);}
   &.main{position: relative; transition: .5s; background-color: #4e4e4e;
     .logo a{display: block; width: 800px; height: 136px; transition: .5s ease-in-out;
     background: url("../../images/common/main-logo-g.png")no-repeat center;
@@ -256,16 +245,16 @@ svg{fill: currentColor;
           +li{margin-top: 10px;}
         }
       }
-      p{font-size: 1em; font-family: $d-fz;line-height: 1.5; color: $c333;}
+      p{font-size: 1em; font-family: $d-fz;line-height: 1.5;}
     }
     .textBox{
-      .titleH3+.mainTxt p{font-size: 0.88em; }  
+      .titleH3+.mainTxt p{font-size: 0.88em;}  
       +.textBox{margin-top: 75px;}
     }
   }
 
   &.license{
-    #contents{padding: 50px 0; min-width: 1200px; margin: 0 auto;}
+    #contents{padding: 50px; width: 1200px; margin: 0 auto;}
     .textBox{
       .titleH3+.mainTxt p{font-size: 0.88em;}
       +.textBox{margin-top: 75px;}
@@ -311,12 +300,12 @@ overflow-y: auto; background-color: var(--d-bg-left-menu); z-index: 1100;
       border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);}
       >span{display: block;
         a{display: flex; align-items: center; justify-content: space-between; position: relative; padding: 16px 0; text-indent: 28px;border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);
-          font-family: $d-fz; font-size: 1.38em; color: var(--d-c-left-menu-dep1); transition: .5s;
+          font-family: $d-fz; font-size: 1.38em; color: var(--d-c-left-menu-depth); transition: .5s;
             svg{width: 30px; height: 18px; margin-right: 17px; transition: .5s;}
         }
       }
       &.active{
-        span>a{color: var(--d-c-at-left-menu-dep1);
+        span>a{color: var(--d-c-at-left-menu-depth);
           svg{transform: rotate(180deg);}
         }
       }
@@ -325,7 +314,7 @@ overflow-y: auto; background-color: var(--d-bg-left-menu); z-index: 1100;
       border-bottom: 1px solid var(--d-bdc); background-color: var(--d-bg-left-menu-dep2);
         &.block{display: block;}
         li{border-bottom: 1px solid var(--d-bdc);
-          a{position: relative; display: block;padding-bottom: 8px; font-family: $d-fz; font-size: 1.13em; color: var(--d-c-left-menu-dep2);
+          a{position: relative; display: block;padding-bottom: 8px; font-family: $d-fz; font-size: 1.13em; color: var(--d-c-left-menu-depth);
             >.depthToggle{position: absolute; top: 5px; right: 3px; width: 17px; height: 17px;
             background-image: url("../../images/ico/ico-unfold.png"); background-repeat: no-repeat; background-position: center;
             background-size: 17px 17px;}
@@ -438,7 +427,7 @@ padding: 92px 0; z-index:950;
   }
   
   /* 본문 텍스트 */
-  .mainTxt{font-size: 1em; font-family: $d-fz; line-height: 1.5; color: var(--d-c-main-txt);
+  .mainTxt{font-size: 1em; font-family: $d-fz; line-height: 1.5;
     +.highlightArea{margin-top: 15px;}
     +.tabWrap{margin-top: 30px;}
   }
@@ -446,10 +435,10 @@ padding: 92px 0; z-index:950;
 
 /* h1 ~ h3 */
 .titleH1,.titleH2,.titleH3{margin-bottom: 20px; padding-bottom: 15px; font-weight: bold; 
-border-bottom: 1px solid var(--d-bdc); font-family: $d-fz;}
-.titleH1{font-size: 2em; color: var(--d-c-title-h1)}
-.titleH2{font-size: 1.5em; color: var(--d-c-title-h2);}
-.titleH3{font-size: 1.25em; color: var(--d-c-title-h3);}      
+border-bottom: 1px solid var(--d-bdc); font-family: $d-fz; color: var(--d-c-title)}
+.titleH1{font-size: 2em; }
+.titleH2{font-size: 1.5em;}
+.titleH3{font-size: 1.25em;}      
 
 .innerTxt{
   >strong{display: block; margin-bottom: 5px; font-size: 1.25em;}
@@ -552,7 +541,7 @@ font-size: 14px; color: $cfff;
   &.mob{display: none;}
 }
 
-#dimmed{display: none; position: fixed; z-index: 9998; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6); backdrop-filter: var(--d-bg-pop-filter);}
+#dimmed{display: none; position: fixed; z-index: 9998; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6); backdrop-filter: blur(2.5px);}
 
 code[class*=language-], pre[class*=language-] pre{white-space: pre-wrap !important; padding: 16px !important; font-size: 1em !important;
 word-break: break-all !important;}
@@ -648,7 +637,7 @@ word-break: break-all !important;}
 }
 
 // result
-#frameBody{display: none; position: fixed; top: 0;width: 100%; height: 100%; background-color: $whiteBg; z-index: 10000;
+#frameBody{display: none; position: fixed; top: 0;width: 100%; height: 100%; background-color: var(--d-bg-body); z-index: 10000;
   .container.hFull{height: 100%;}
   .btnArea{position: fixed; top: 0; right: 0; z-index: 9999;
     .frameClose{position: relative; width: 24px; height: 24px; padding: 18px; box-sizing: border-box;
