--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -116,15 +116,11 @@ pre {
 body {
   --d-bg-body: #fff;
   --d-bg-left-menu:#f5f5f5;
-  --d-c-title-h1: #202020;
-  --d-c-title-h2: #202020;
-  --d-c-title-h3: #202020;
+  --d-c-title: #202020;
   --d-c-main-txt: #333;
-  --d-c-left-menu-dep1: #333;
-  --d-c-left-menu-dep2: #707070;
+  --d-c-left-menu-depth: #333;
+  --d-c-at-left-menu-depth: #266bf7;
   --dis-c-left-menu-dep2: #ccc;
-  --d-c-at-left-menu-dep1:#266bf7;
-  --d-c-at-left-menu-dep2:#266bf7;
   --d-c-at-more-sub-menu: #202020;
   --d-bg-left-menu-dep1: #707070;
   --d-bg-left-menu-dep2: #eee;
@@ -133,7 +129,6 @@ body {
   --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
   --d-bg-pop: #fff;
   --d-c-pop: #222;
-  --d-bg-pop-filter: none;
   --d-bdc: #ddd;
   --d-sc-thumb: #ccc;
   --d-sc-track: #e9e9e9;
@@ -157,20 +152,17 @@ body {
   --bdc-input: #ddd;
   --primary: #266bf7;
   --d-key-focus: #000;
+  --d-fb-box: #000;
 }
 
 body[data-theme='light'] {
   --d-bg-body: #fff;
   --d-bg-left-menu:#f5f5f5;
-  --d-c-title-h1: #202020;
-  --d-c-title-h2: #202020;
-  --d-c-title-h3: #202020;
+  --d-c-title: #202020;
   --d-c-main-txt: #333;
-  --d-c-left-menu-dep1: #333;
-  --d-c-left-menu-dep2: #707070;
+  --d-c-left-menu-depth: #333;
+  --d-c-at-left-menu-depth: #266bf7;
   --dis-c-left-menu-dep2: #ccc;
-  --d-c-at-left-menu-dep1:#266bf7;
-  --d-c-at-left-menu-dep2:#266bf7;
   --d-c-at-more-sub-menu: #202020;
   --d-bg-left-menu-dep1: #707070;
   --d-bg-left-menu-dep2: #eee;
@@ -179,7 +171,6 @@ body[data-theme='light'] {
   --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
   --d-bg-pop: #fff;
   --d-c-pop: #222;
-  --d-bg-pop-filter: none;
   --d-bdc: #ddd;
   --d-sc-thumb: #ccc;
   --d-sc-track: #e9e9e9;
@@ -203,20 +194,17 @@ body[data-theme='light'] {
   --bdc-input: #ddd;
   --primary: #266bf7;
   --d-key-focus: #000;
+  --d-fb-box: #000;
 }
 
 body[data-theme='dark'] {
   --d-bg-body: #181818;
   --d-bg-left-menu:#212121;
-  --d-c-title-h1: rgba(242, 241, 241, 1);
-  --d-c-title-h2: rgba(242, 241, 241, 1);
-  --d-c-title-h3: rgba(242, 241, 241, 1);
+  --d-c-title: rgba(242, 241, 241, 1);
   --d-c-main-txt: #ececec;
-  --d-c-left-menu-dep1: rgba(242, 241, 241, 1);
-  --d-c-left-menu-dep2: #d9d9d9;
+  --d-c-left-menu-depth: rgba(242, 241, 241, 1);
+  --d-c-at-left-menu-depth: rgba(89,148,241,1);
   --dis-c-left-menu-dep2: #717171;
-  --d-c-at-left-menu-dep1:rgba(89,148,241,1);
-  --d-c-at-left-menu-dep2:rgba(89,148,241,1);
   --d-c-at-more-sub-menu: rgba(242, 241, 241, 1);
   --d-bg-left-menu-dep1: rgba(242, 241, 241, 1);
   --d-bg-left-menu-dep2: #1e1f21;
@@ -225,7 +213,6 @@ body[data-theme='dark'] {
   --d-bg-hv-util-area-circle: rgba(255,255,255,0.1);
   --d-bg-pop: #313131;
   --d-c-pop: rgba(242, 241, 241, 1);
-  --d-bg-pop-filter: blur(2.5px);
   --d-bdc: #3a3b3d;
   --d-sc-thumb: #686868;
   --d-sc-track: #424242;
@@ -250,6 +237,7 @@ body[data-theme='dark'] {
   --bdc-input: #a0a0a0;
   --primary: #2196F3;
   --d-key-focus: #fff;
+  --d-fb-box: #555;
 }
 
 body {
@@ -323,6 +311,10 @@ svg.darkType {
   width: 100%;
   height: 100%;
   /* update page */
+}
+
+#wrap .mainTxt {
+  color: var(--d-c-main-txt);
 }
 
 #wrap.main {
@@ -436,7 +428,6 @@ svg.darkType {
   font-size: 1em;
   font-family: "Noto Sans";
   line-height: 1.5;
-  color: #333;
 }
 
 #wrap.update .textBox .titleH3 + .mainTxt p {
@@ -448,8 +439,8 @@ svg.darkType {
 }
 
 #wrap.license #contents {
-  padding: 50px 0;
-  min-width: 1200px;
+  padding: 50px;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -604,7 +595,7 @@ svg.darkType {
   border-bottom: 1px solid rgba(0, 0, 18, 0.08);
   font-family: "Noto Sans";
   font-size: 1.38em;
-  color: var(--d-c-left-menu-dep1);
+  color: var(--d-c-left-menu-depth);
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -618,7 +609,7 @@ svg.darkType {
 }
 
 .leftArea > .leftMenu > li.active span > a {
-  color: var(--d-c-at-left-menu-dep1);
+  color: var(--d-c-at-left-menu-depth);
 }
 
 .leftArea > .leftMenu > li.active span > a svg {
@@ -653,7 +644,7 @@ svg.darkType {
   padding-bottom: 8px;
   font-family: "Noto Sans";
   font-size: 1.13em;
-  color: var(--d-c-left-menu-dep2);
+  color: var(--d-c-left-menu-depth);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li a > .depthToggle {
@@ -1017,7 +1008,6 @@ svg.darkType {
   font-size: 1em;
   font-family: "Noto Sans";
   line-height: 1.5;
-  color: var(--d-c-main-txt);
 }
 
 .rightArea .mainTxt + .highlightArea {
@@ -1035,21 +1025,19 @@ svg.darkType {
   font-weight: bold;
   border-bottom: 1px solid var(--d-bdc);
   font-family: "Noto Sans";
+  color: var(--d-c-title);
 }
 
 .titleH1 {
   font-size: 2em;
-  color: var(--d-c-title-h1);
 }
 
 .titleH2 {
   font-size: 1.5em;
-  color: var(--d-c-title-h2);
 }
 
 .titleH3 {
   font-size: 1.25em;
-  color: var(--d-c-title-h3);
 }
 
 .innerTxt > strong {
@@ -1366,8 +1354,8 @@ a.mail {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  -webkit-backdrop-filter: var(--d-bg-pop-filter);
-          backdrop-filter: var(--d-bg-pop-filter);
+  -webkit-backdrop-filter: blur(2.5px);
+          backdrop-filter: blur(2.5px);
 }
 
 code[class*=language-], pre[class*=language-] pre {
@@ -1654,7 +1642,7 @@ code[class*=language-], pre[class*=language-] pre {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--d-bg-body);
   z-index: 10000;
 }
 
@@ -2534,7 +2522,7 @@ code[class*=language-], pre[class*=language-] pre {
   font-size: 1em;
   font-family: "Noto Sans";
   color: #fff;
-  background-color: #000;
+  background-color: var(--d-fb-box);
 }
 
 .wrap.pre.flexLayout .resultCont .container .flexArea .flexItem.bgGray {
@@ -3802,11 +3790,15 @@ input[type="image"], input[type="color"], input[type="button"] {
 }
 
 @media screen and (max-width: 500px) {
-  #container {
+  #wrap.license #container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  #wrap.license #container #contents {
+    width: auto;
+    max-width: 1200px;
   }
 }
 
@@ -3894,22 +3886,89 @@ input[type="image"], input[type="color"], input[type="button"] {
 @media (prefers-color-scheme: light) {
   body {
     --d-bg-body: #fff;
-    --d-c-title-h1: #202020;
-    --d-c-title-h2: #202020;
-    --d-c-title-h3: #202020;
-    --d-bdc: #ddd;
+    --d-bg-left-menu:#f5f5f5;
+    --d-c-title: #202020;
     --d-c-main-txt: #333;
+    --d-c-left-menu-depth: #333;
+    --d-c-at-left-menu-depth: #266bf7;
+    --dis-c-left-menu-dep2: #ccc;
+    --d-c-at-more-sub-menu: #202020;
+    --d-bg-left-menu-dep1: #707070;
+    --d-bg-left-menu-dep2: #eee;
+    --d-bg-at-more-sub-menu: #f3f4f5;
+    --d-bg-hv-more-sub-menu-item: rgba(204, 204, 204, 0.8);
+    --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
+    --d-bg-pop: #fff;
+    --d-c-pop: #222;
+    --d-bdc: #ddd;
+    --d-sc-thumb: #ccc;
+    --d-sc-track: #e9e9e9;
+    --d-sc-hv-thumb: #b6b6b6;
+    --d-sc-at-thumb: #808080;
+    --d-svg-current: #000;
+    --d-bg-input: #fff;
+    --d-c-input: #222;
+    --c-emphasis01: #266bf7;
+    --c-emphasis02: #1694d2;
+    --c-tab:#000;
+    --logo-light: inline-block;
+    --logo-dark: none;
+    --ico-light:inline-block;
+    --ico-dark: none;
+    --mark-dep3: rgba(32, 32, 32, 0.75);
+    --bdc-btt: #000;
+    --bg-hv-btt: #000;
+    --hv-svg-btt: #fff;
+    --ele-shadow: #ddd;
+    --bdc-input: #ddd;
+    --primary: #266bf7;
+    --d-key-focus: #000;
+    --d-fb-box: #000;
   }
 }
 
 @media (prefers-color-scheme: dark) {
   body {
     --d-bg-body: #181818;
-    --d-c-title-h1: rgba(242, 241, 241, 1);
-    --d-c-title-h2: rgba(242, 241, 241, 1);
-    --d-c-title-h3: rgba(242, 241, 241, 1);
-    --d-bdc: #3a3b3d;
+    --d-bg-left-menu:#212121;
+    --d-c-title: rgba(242, 241, 241, 1);
     --d-c-main-txt: #ececec;
+    --d-c-left-menu-depth: rgba(242, 241, 241, 1);
+    --d-c-at-left-menu-depth: rgba(89,148,241,1);
+    --dis-c-left-menu-dep2: #717171;
+    --d-c-at-more-sub-menu: rgba(242, 241, 241, 1);
+    --d-bg-left-menu-dep1: rgba(242, 241, 241, 1);
+    --d-bg-left-menu-dep2: #1e1f21;
+    --d-bg-at-more-sub-menu: #2d2d2d;
+    --d-bg-hv-more-sub-menu-item: #53575C;
+    --d-bg-hv-util-area-circle: rgba(255,255,255,0.1);
+    --d-bg-pop: #313131;
+    --d-c-pop: rgba(242, 241, 241, 1);
+    --d-bdc: #3a3b3d;
+    --d-sc-thumb: #686868;
+    --d-sc-track: #424242;
+    --d-sc-hv-thumb: #7b7b7b;
+    --d-sc-at-thumb: #b6b6b6;
+    --d-svg-current: #fff;
+    --d-bg-input: #333;
+    --d-c-input: #fff;
+    --c-emphasis01: rgba(89,148,241,1);
+    --c-emphasis02: rgba(149,196,232,1);
+    --c-tab:#ececec;
+    --logo-light: none;
+    --logo-dark: inline-block;
+    --ico-light: none;
+    --ico-dark: inline-block;
+    --mark-dep3: rgba(242, 241, 241, 1);
+    --bdc-btt: #fff;
+    --bg-hv-btt: #fff;
+    --hv-svg-btt: #000;
+    --d-svg-btt: #fff;
+    --ele-shadow: transparent;
+    --bdc-input: #a0a0a0;
+    --primary: #2196F3;
+    --d-key-focus: #fff;
+    --d-fb-box: #555;
   }
 }
 /*# sourceMappingURL=component.css.map */
